--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="already_registered_sign_in">Already Registered, Sign In !</string>
     <string name="sign_in">Sign In</string>
     <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
+    <string name="welcome">Welcome</string>
 
 
 </resources>
